--- a/biologia2.html
+++ b/biologia2.html
@@ -204,7 +204,60 @@ BIOLOGIA
 
 </div>
 
+<div>
 
+    <div class="contenido"></div>
+    <div class="imagenbiolo"></div>
+    <div class="textobiolo">
+    <p>
+    <h1>ENFERMEDADES GENETICAS</h1>
+    <br>
+    </p>
+    <p>
+    ¿Qué es una enfermedad genética? Una enfermedad genética es un trastorno que se origina debido a una alteración en un gen. Existen miles de enfermedades genéticas y se están descubriendo aún más cada día. Nuestro cuerpo está compuesto por miles de millones de células ycada una contiene un conjunto de genes.
+    </p>
+    <p>
+    <h1>FIBROSIS QUIETICA.</h1>
+    <br>
+    </p>
+<p>
+    La fibrosis quística (FQ) es una enfermedad hereditaria. Es causada por un gen defectuoso que lleva al cuerpo a producir un líquido anormalmente espeso y pegajoso llamado moco. Este moco se acumula en las vías respiratorias de los pulmones y en el páncreas.
+    <br>
+</p>
+<p>
+    <h1>HEMOFILI.</h1>
+    <br>
+    <p>
+    La hemofilia es un trastorno hemorrágico hereditario en el cual la sangre no se coagula de manera adecuada. Esto puede causar hemorragias tanto espontáneas como después de una operación o de tener una lesión.
+     <br>
+    </p>
+    <p>
+    <h1>HIPERCOLESTOREMIA FAMILIAR</h1>
+    <br>
+    <p>
+    La hipercolesterolemia familiar es un trastorno genético. Es causado por un defecto en el cromosoma 19. El defecto hace que el cuerpo sea incapaz de eliminar la lipoproteína de baja densidad (colesterol LDL o malo) de la sangre. Esto provoca un nivel alto de colesterol LDL en la sangre.
+    <br>
+    </p>
+    <p>
+    <h1>SINDROME X-FRAGILSíndrome.</h1>
+    <br>
+    </p>
+    <p>
+    El síndrome del cromosoma X frágil (FXS, por sus siglas en inglés) es un trastorno genético. Un trastorno genético implica que hay cambios en los genes de la persona. El FXS es provocado por cambios en el gen 1 FMR1. El gen FMR1 por lo general produce una proteína llamada FMRP.
+    <br>
+    </p>
+    <p>
+     <H1>SINDROME DE MOEBIUS</H1>
+     <br>
+    </p>
+    <p>
+    es un trastorno congénito poco frecuente con prevalencia menor del 0.05%, caracterizado por parálisis facial congénita asociada a ausencia de abducción de los ojos por alteraciones del VI y VII nervios craneales, ya sea simétrica o asimétrica.
+    <br>
+    </p>
+    </p>
+</p>
+    </div>
+</div>
 
 </div>
 
